--- a/assets/scss/base/_colors.scss
+++ b/assets/scss/base/_colors.scss
@@ -1,2 +1,8 @@
+
 $color-white: #ffffff;
 $color-black: #000000;
+
+$purple: #6b26ff;
+$muted: #9aa0ac;
+$sidebar-width: 220px;
+$sidebar-collapsed: 88px;
