--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -8,9 +8,9 @@
 @import "./base/dev";
 
 // atoms
-@import 'atoms/';
+// @import 'atoms/';
 // molecule
-@import 'molecules/';
+// @import 'molecules/';
 // organisms
-@import 'organisms/';
+@import 'organisms/sidebar';
 // pages
