--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -10,7 +10,9 @@
 // atoms
 // @import 'atoms/';
 // molecule
-// @import 'molecules/';
+@import 'molecules/week-progress';
 // organisms
 @import 'organisms/sidebar';
+@import 'organisms/profilesection';
+@import 'organisms/mainsection';
 // pages
