--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -15,4 +15,5 @@
 @import 'organisms/sidebar';
 @import 'organisms/profilesection';
 @import 'organisms/mainsection';
+@import 'organisms/final';
 // pages
